Change GitHub repository refereces
Also remove email addresses.

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "insomnia",
   "private": true,
   "version": "1.0.0",
-  "author": "Kong <office@konghq.com>",
+  "author": "Kong",
   "description": "Insomnia is a cross-platform REST client, built on top of Electron.",
   "license": "MIT",
-  "repository": "https://github.com/kong/insomnia",
+  "repository": "https://github.com/bernd/insomnia",
   "bugs": {
-    "url": "https://github.com/kong/insomnia/issues"
+    "url": "https://github.com/bernd/insomnia/issues"
   },
-  "homepage": "https://github.com/kong/insomnia#readme",
+  "homepage": "https://github.com/bernd/insomnia#readme",
   "engines": {
     "node": ">=18.15 <20",
     "npm": ">=8.19.0"
