--- a/packages/insomnia-send-request/package.json
+++ b/packages/insomnia-send-request/package.json
@@ -3,7 +3,7 @@
   "name": "insomnia-send-request",
   "license": "Apache-2.0",
   "version": "2023.5.8",
-  "author": "Kong <office@konghq.com>",
+  "author": "Kong",
   "main": "dist/index.js",
   "types": "dist/send-request/index.d.ts",
   "dependencies": {
