--- a/packages/insomnia-inso/package.json
+++ b/packages/insomnia-inso/package.json
@@ -4,15 +4,15 @@
   "version": "2023.5.8",
   "homepage": "https://insomnia.rest",
   "description": "A CLI for Insomnia - The Collaborative API Design Tool",
-  "author": "Kong <office@konghq.com>",
+  "author": "Kong",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Kong/insomnia.git",
+    "url": "git+https://github.com/bernd/insomnia.git",
     "directory": "packages/insomnia-inso"
   },
   "bugs": {
-    "url": "https://github.com/kong/insomnia/issues"
+    "url": "https://github.com/bernd/insomnia/issues"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
