--- a/packages/openapi-2-kong/package.json
+++ b/packages/openapi-2-kong/package.json
@@ -3,7 +3,7 @@
   "name": "openapi-2-kong",
   "license": "Apache-2.0",
   "version": "2023.5.8",
-  "author": "Kong <office@konghq.com>",
+  "author": "Kong",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
@@ -26,12 +26,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Kong/insomnia.git",
+    "url": "git+https://github.com/bernd/insomnia.git",
     "directory": "packages/openapi-2-kong"
   },
   "bugs": {
-    "url": "https://github.com/Kong/insomnia/issues"
+    "url": "https://github.com/bernd/insomnia/issues"
   },
   "description": "This module generates Kong Declarative Config and Kong for Kubernetes config, from OpenAPI 3.0 specifications.",
-  "homepage": "https://github.com/Kong/insomnia#readme"
+  "homepage": "https://github.com/bernd/insomnia#readme"
 }
