Replace some more repo references

--- a/packages/insomnia/config/config.json
+++ b/packages/insomnia/config/config.json
@@ -9,7 +9,7 @@
   "theme": "default",
   "lightTheme": "studio-light",
   "darkTheme": "default",
-  "githubOrg": "Kong",
+  "githubOrg": "bernd",
   "githubRepo": "insomnia",
   "segmentWriteKeys": {
     "development": "none",
