Start renaming from Insomnia to Unetus

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "insomnia",
+  "name": "unetus",
   "private": true,
   "version": "1.0.0",
   "author": "Kong",
-  "description": "Insomnia is a cross-platform REST client, built on top of Electron.",
+  "description": "Unetus is a cross-platform REST client, built on top of Electron.",
   "license": "MIT",
   "repository": "https://github.com/bernd/insomnia",
   "bugs": {
