--- a/packages/insomnia/package.json
+++ b/packages/insomnia/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "insomnia",
+  "name": "unetus",
   "version": "2023.5.8",
-  "productName": "Insomnia",
+  "productName": "Unetus",
   "private": true,
   "description": "The Collaborative API Design Tool",
   "homepage": "https://github.com/bernd/insomnia",
@@ -190,6 +190,6 @@
     "protobufjs": "7.2.4"
   },
   "bin": {
-    "insomnia": "bin/yarn-standalone.js"
+    "unetus": "bin/yarn-standalone.js"
   }
 }
