--- a/packages/insomnia-send-request/package.json
+++ b/packages/insomnia-send-request/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "insomnia-send-request",
+  "name": "unetus-send-request",
   "license": "Apache-2.0",
   "version": "2023.5.8",
   "author": "Kong",
