--- a/packages/insomnia-inso/package.json
+++ b/packages/insomnia-inso/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "insomnia-inso",
+  "name": "unetus-inso",
   "version": "2023.5.8",
-  "homepage": "https://insomnia.rest",
-  "description": "A CLI for Insomnia - The Collaborative API Design Tool",
+  "homepage": "https://github.com/bernd/unetus",
+  "description": "A CLI for Unetus - The Collaborative API Design Tool",
   "author": "Kong",
   "license": "Apache-2.0",
   "repository": {
