--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     types:
       - opened
@@ -37,8 +37,8 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Lint markdown
-        run: npm run lint:markdown
+#      - name: Lint markdown
+#        run: npm run lint:markdown
 
       - name: Type checks
         run: npm run type-check
@@ -52,57 +52,57 @@ jobs:
       - name: Test Insomnia Testing
         run: npm test -w packages/insomnia-testing
 
-      - name: Build app for smoke tests
-        run: NODE_OPTIONS='--max_old_space_size=6144' npm run app-build
+#      - name: Build app for smoke tests
+#        run: NODE_OPTIONS='--max_old_space_size=6144' npm run app-build
 
-      - name: Smoke test electron app
-        # Partial Smoke test run, for regular CI triggers
-        if: ${{ !startsWith(github.head_ref, 'release/') }}
-        run: npm run test:build -w packages/insomnia-smoke-test -- --project=Smoke
+#      - name: Smoke test electron app
+#        # Partial Smoke test run, for regular CI triggers
+#        if: ${{ !startsWith(github.head_ref, 'release/') }}
+#        run: npm run test:build -w packages/insomnia-smoke-test -- --project=Smoke
 
-      - name: Prerelease test electron app
-        # Full Smoke test run, for Release PRs
-        if: ${{ startsWith(github.head_ref, 'release/') }}
-        run: npm run test:build -w packages/insomnia-smoke-test -- --project=Default
+#      - name: Prerelease test electron app
+#        # Full Smoke test run, for Release PRs
+#        if: ${{ startsWith(github.head_ref, 'release/') }}
+#        run: npm run test:build -w packages/insomnia-smoke-test -- --project=Default
 
-      - name: Set Inso CLI variables
-        id: inso-variables
-        shell: bash
-        run: |
-          INSO_VERSION="$(jq .version packages/insomnia-inso/package.json -rj)-run.${{ github.run_number }}"
-          PKG_NAME="inso-ubuntu-latest-$INSO_VERSION"
-          echo "pkg-name=$PKG_NAME" >> $GITHUB_OUTPUT
-          echo "inso-version=$INSO_VERSION" >> $GITHUB_OUTPUT
+#      - name: Set Inso CLI variables
+#        id: inso-variables
+#        shell: bash
+#        run: |
+#          INSO_VERSION="$(jq .version packages/insomnia-inso/package.json -rj)-run.${{ github.run_number }}"
+#          PKG_NAME="inso-ubuntu-latest-$INSO_VERSION"
+#          echo "pkg-name=$PKG_NAME" >> $GITHUB_OUTPUT
+#          echo "inso-version=$INSO_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Run Inso NPM package tests
-        run: npm run test:bundled-inso
+#      - name: Run Inso NPM package tests
+#        run: npm run test:bundled-inso
 
-      - name: Package Inso CLI binary
-        run: |
-          echo "Replacing node-libcurl electron binary with node binary"
-          node_modules/.bin/node-pre-gyp install --update-binary --directory node_modules/@getinsomnia/node-libcurl
-          npm run inso-package
-        env:
-          VERSION: ${{ steps.inso-variables.outputs.inso-version }}
+#      - name: Package Inso CLI binary
+#        run: |
+#          echo "Replacing node-libcurl electron binary with node binary"
+#          node_modules/.bin/node-pre-gyp install --update-binary --directory node_modules/@getinsomnia/node-libcurl
+#          npm run inso-package
+#        env:
+#          VERSION: ${{ steps.inso-variables.outputs.inso-version }}
 
-      - name: Create Inso CLI artifacts
-        run: npm run inso-package:artifacts
-        env:
-          VERSION: ${{ steps.inso-variables.outputs.inso-version }}
+#      - name: Create Inso CLI artifacts
+#        run: npm run inso-package:artifacts
+#        env:
+#          VERSION: ${{ steps.inso-variables.outputs.inso-version }}
 
-      - name: Upload Inso CLI artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          if-no-files-found: ignore
-          name: ${{ steps.inso-variables.outputs.pkg-name }}
-          path: packages/insomnia-inso/artifacts
+#      - name: Upload Inso CLI artifacts
+#        uses: actions/upload-artifact@v3
+#        with:
+#          if-no-files-found: ignore
+#          name: ${{ steps.inso-variables.outputs.pkg-name }}
+#          path: packages/insomnia-inso/artifacts
 
-      - name: Smoke test Inso CLI
-        run: npm run test:smoke:cli
+#      - name: Smoke test Inso CLI
+#        run: npm run test:smoke:cli
 
-      - name: Upload smoke test traces
-        uses: actions/upload-artifact@v3
-        with:
-          if-no-files-found: ignore
-          name: ubuntu-smoke-test-traces-${{ github.run_number }}
-          path: packages/insomnia-smoke-test/traces
+#      - name: Upload smoke test traces
+#        uses: actions/upload-artifact@v3
+#        with:
+#          if-no-files-found: ignore
+#          name: ubuntu-smoke-test-traces-${{ github.run_number }}
+#          path: packages/insomnia-smoke-test/traces
