--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,12 +1,9 @@
-title: Insomnia Docs
+title: Unetus Docs
 email: support@insomnia.rest
 description: >- # this means to ignore newlines until "baseurl:"
-  Insomnia Docs: Deliver high quality APIs through standards 
-  and collaboration with the Insomnia API design platform.
+  Unetus Docs: Deliver high quality APIs through standards.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://docs.insomnia.rest" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: getinsomnia
-github_username:  insomnia
 
 # Build settings
 theme: minima
