--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -69,7 +69,7 @@ body:
   attributes:
     label: Installation method
     description: How did you install Insomnia?
-    placeholder: "e.g. download from insomnia.rest, homebrew, apt, etc."
+    placeholder: "e.g. download from release page, etc."
   validations:
     required: true
 - type: input
