--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,9 @@ highlighter: rouge
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - "CONTRIBUTING.md"
+  - "LICENSE.txt"
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
