--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,7 +35,8 @@ jobs:
           destination: ./docs/_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
-        path: docs/_site
+        with:
+          path: docs/_site
 
   deploy:
     environment:
