--- a/packages/insomnia/package.json
+++ b/packages/insomnia/package.json
@@ -14,7 +14,7 @@
     "directory": "packages/insomnia"
   },
   "license": "MIT",
-  "author": "Kong",
+  "author": "Bernd Ahlers <bernd@tuneafish.de>",
   "main": "src/main.min.js",
   "scripts": {
     "build": "npm run build:sr && npm run build:app",
